# CodeSnap

./: .gitignore  README.md  idea.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-version-from-tag.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: CodeEditor.svelte  CustomSelect.svelte  MarkdownPreview.svelte  languages.ts  snapshot.ts  tauri.ts
